Checkpoint work to git

--- a/content/content/extras/01_intro_oo.md.erb
+++ b/content/content/extras/01_intro_oo.md.erb
@@ -23,7 +23,7 @@ cat: design
 * <%= link_to_topic :four_rules_simple_design %>
 
 #### Ruby Live Coding Demonstration and discussion
-<%= include_ruby :classes_tut %>
+<%= include_topic :classes_tut %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
