--- a/content/content/extras/02_tdd.md.erb
+++ b/content/content/extras/02_tdd.md.erb
@@ -37,7 +37,7 @@ cat: design
 * What do "I" do with testing in "real life"?
 * Let's review some of the options in [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
 
-<%= include_topic :test_fixtures %>
+<%= include_topic :testing_fixtures %>
 
 <%= link_to_topic :four_rules_simple_design %>
 
