--- a/content/content/lectures/part3/05_cloud_deployment.md.erb
+++ b/content/content/lectures/part3/05_cloud_deployment.md.erb
@@ -8,7 +8,7 @@ cat: scale
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
 1. <%= codebadge %> <%= pdfbadge %> **Extension!** Complete 0.4 as a team (See: <%= link_to_section :nt, :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. **Note**: the grade for this item will be in reference to the state of the code, not just the progress update. Note 2: The mark this assignment receives will reflect how comlete your nT 0.4 is. <%= team_deliverable %(nT code for [nanoTwitter 0.4] in portfolio and github. Submit to Latte the brief project update.) %>
-1. <%= pdfbadge %> <%= partbadge %> <%= include_topic :hw_selfpeerassess %>
+1. <%= pdfbadge %> <%= partbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge%>  **Read and Warmups**: Read this article by famous Software Engineering thinker [Martin Fowler](http://martinfowler.com): [Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html). Please answer these warmup questions:
   * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
   * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
