--- a/content/content/lectures/part4/06_software_engineering.md.erb
+++ b/content/content/lectures/part4/06_software_engineering.md.erb
@@ -12,7 +12,7 @@ cat: software design
 <%= include_topic :hw_reflection_cosi %>
 
 #### Review
-* Let's take a look at the <%= link_to_topic :final_105_deliverables %>
+* Let's take a look at the <%= link_to_topic :cs105b_final_deliverables %>
 * Let's take a look at <%= link_to_topic :scalability_runoff %>
 * Quick review of <%= link_to_topic :nt_client_library %>
 * Discussion about using Heroku for a service
