--- a/content/content/lectures/part4/08_preparation.md.erb
+++ b/content/content/lectures/part4/08_preparation.md.erb
@@ -10,7 +10,7 @@ desc: Discussions and work on projects
 * Continue improving and refining nanoTwitter
 
 #### Topics
-* Explain and clarify <%= link_to_topic :final_105_deliverables %>
+* Explain and clarify <%= link_to_topic :cs105b_final_deliverables %>
 * Small groups: what did you actually learn: Top 3, in brief
 * Do the Course Evaluations
 * Real world discussion
