--- a/content/content/lectures/part4/09_last_class.md.erb
+++ b/content/content/lectures/part4/09_last_class.md.erb
@@ -9,7 +9,7 @@ cat: general
 
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
-* <%= partbadge %> <%= pdfbadge %> <%= include_topic :hw_team_peer_reviews %>
+* <%= partbadge %> <%= pdfbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
 
 ### There will be some food!
 
