--- a/content/bootstrap/css/custom.css
+++ b/content/bootstrap/css/custom.css
@@ -1,67 +1,72 @@
-/*Theme settings here*/
-
+@import url("prettyquote.css");
 @import url(//fonts.googleapis.com/css?family=Telex);
 
 .themefg {
-  color: rgb(169, 117, 107);
+  color: rgb(189,122,56);
 }
 
 .themebg {
-  background-color: rgb(169, 117, 107);
+  background-color: rgb(189,122,56);
+}
+.nav-menus {
+  height: 0px;
 }
 
-h1, h2, h3, h4, h5 {
-	font-family: telex;
-	color: rgb(169, 117, 107);
-}
-
-a {
-  color: rgb(169, 117, 107);
-}
-
-.nav-btn {
+.navbar-inverse .navbar-nav > li > a {
+  padding-top: 4px;
+  padding-bottom: 0px;
   color: white;
 }
 
-/*Don't change below here*/
-
-div.nav-btn {
-  padding-top:5px;
+.navbar-inverse .navbar-nav > li > a:hover {
+  font-weight: bold;
 }
 
 .navbar a.navbar-title {
-	color: white;
-	padding-top: 7px;
+  font-family: telex;
+  float: left;
+  margin-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 28px;
+  color: white;
+  white-space: nowrap;
+  background-color: rgba(18, 0, 0, 0.3);
+}
+
+.nav-menus a.navbar-brand {
+  padding: 4px 10px;
+  color: white;
+}
+
+.nav-menus a.navbar-brand:hover {
+  font-weight: bold;
+}
+
+.nav-btn.btn-mini {
+  font-size: 16px;
+  color: white;
 }
 
 .navbar {
-	/*margin-bottom: 1px;*/
-  min-height: 0px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+	min-height: 35px;
+	margin-bottom: 1px;
 }
-
 
 .navbar a:hover {
 	color: white;
-}
-
-.navbar a {
-	padding: 6px;
-	color: light-blue;
-}
-
-.navbar-title {
-  float: left;
-  height: 30px;
-  font-size: 18px;
-  line-height: 20px
+  text-decoration: none;
 }
 
 .navbar .input-group-sm input{
 	height: 22px;
 	width: 150px;
-	margin-top: 6px;
+	margin-top: 4px;
+}
+
+h1, h2, h3, h4, h5{
+	font-family: telex;
+	color: rgb(21, 123, 207);
 }
 
 h3 {
@@ -74,7 +79,7 @@ h3.body-header {
 
 h4 {
 	margin-top: 20px;
-	border-top: gainsboro solid 1px;
+  border-top: rgb(21, 123, 207) solid 3px;
 	padding-top: 5px;
 }
 
