--- a/layouts/main_navbarorg.html.erb
+++ b/layouts/main_navbarorg.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-7">
+    <div class="col-xs-7 nav-menus">
       <a class="navbar-brand" href="/"><%= COURSE_SHORT_NAME %> - <%= COURSE_LONG_NAME %></a>
     </div>
     <div class="col-xs-2">
