--- a/content/content/intro/03_syllabus.md.erb
+++ b/content/content/intro/03_syllabus.md.erb
@@ -8,8 +8,6 @@ title: Syllabus
 <% tbh.row("Class Times", "Tuesday and Friday, 12:30pm to 1:50pm\<br\>
 To get the most out of this class it is strongly recommended that students attend the two hour recitation on Fridays 2:50-4:50pm.") %>
 <% tbh.row("Location", "Class: Shapiro Science Center LL16, Recitation: Volen 106") %>
-<% tbh.row("TA", "Karishma Reddy Khan <kreddykhan@brandeis.edu>") %>
-<% tbh.row("TA", "Alex Suk <asuk24@brandeis.edu>") %>
 <% tbh.row("Prerequisites", "Cosi21a and Cosi166b (or permission)") %>
 <% tbh.row("Homework", "Daily homework assignments; Major nanoTwitter project; Team assignments. Success in this 4 credit hour course is based on the expectation that students will spend a minimum of 9 hours of study time per week in preparation for class (readings, papers, discussion sections, preparation for exams, etc.).  ") %>
 <%= tbh.render %>
@@ -25,6 +23,8 @@ This is most certainly an evolving space with new work happening both in academi
 1. Architecture for Scale: We also want to examine how to design systems which will scale under major load, whether it be many users, many transactions, lots of data, etc. Each of these are different kinds of scale challenges and will require different kinds of strategies. We will also of course look at generating synthetic load and measuring scale correctly.
 1. Software Design: We want to look at programming beyond just 'getting it to work.' In large systems one thinks a lot about what happens to the program once its written. Software that's used in the real world will always get revised, often. We will look at foundational principles of design such as the Single Responsibility Principle, Inheritance vs. Delegation tradeoffs, the importance of good naming, Test driven design, and many others.
 d1. Major development project: There will be multiple programming assignments where students will work individually or in teams to modify and enhance parts of the NanoTwitter software. Students will have to build and test on their own computers and then deploy software to servers in the cloud. We will subject the software to artificial loads to see how they behave and then see how changes affect performance.
+
+<%= include_topic :experiential %>
 
 #### Additional Information
 
