Checkpoint work to git

--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -5,11 +5,12 @@ homework: 1) Make sure your computer is properly set up! 2) Begin working on the
 cat: general
 ---
 <%= homework_hdr %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
 <%= callout("Note for first day of class:", " Each day of class has a page on this web site. The first section of that page is always the homework due on that very day. So in other words, the homework listed here is actually 'pre-work' for day one. We will go over this in a little more detail during class.") %>
 
 1. **Linux Parition**: If you are on Windows, you are required to setup a Linux Partition. Here is why and how: <%= link_to_topic :linux_partition %>
-1. **Ruby**: Begin working on the programming assignment: <%= link_to_topic :pa_interactive_music %>
+1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
 #### Introductions
 * Introduce Pito, and how I ended up here. Look at: <%= link_to_topic :pitofaq %>
@@ -32,7 +33,7 @@ cat: general
 * Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=6990)
 
 #### Recitation
-<%= callout("NB", " Every Friday (including today!) from 2:00 to 4:50 we have a lab/workshop in Goldsmith 317") %>
+<%= callout("NB", " Every Tuesday from 5:00pm to 6:50pm we have a lab/workshop in Goldsmith 317") %>
 * My experience teaching this course is that most of you will need this to be successful.
 * There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
 
@@ -58,5 +59,5 @@ cat: general
 * Notes about <%= link_to_topic :working_in_teams %>
 
 #### Next Class
-<%= callout("Remember", " Recitation is Friday at 2:00pm and every week, starting today!") %>
+<%= callout("Remember", " Recitation is Tuesday at 5:00pm and every week!") %>
 * Look at homework: <%= link_to_next_lecture %>
