--- a/content/content/lectures/part1/07_database_basics.md.erb
+++ b/content/content/lectures/part1/07_database_basics.md.erb
@@ -5,21 +5,11 @@ homework: 1) Do PA - Sinatra Evite 1; 2) Do schema design exercise
 cat: web
 ---
 <%= homework_hdr %>
-1. <%= codebadge %> **Code:** Use what you've practiced in the Tutorial and Chapter 1 and do <%= link_to_topic :pa_sinatra_evite_1 %>. Do the code in your portfolio, creating a new directory. Please name the directory: `sinatra-evite`. <%= deliverable "Zip up the resulting code and submit it to Latte" %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
+
+1. <%= zipbadge %> **Code:** Use what you've practiced in the Tutorial and Chapter 1 and do <%= link_to_topic :pa_sinatra_evite_1 %>. Do the code in your portfolio, creating a new directory. Please name the directory: `sinatra-evite`. <%= deliverable "Zip up the resulting code and submit it to Latte" %>
 1. <%= timebadge %> <%= partbadge %> Read and think about [Basics of Good Database Design in Web Development](http://www.onextrapixel.com/2011/03/17/the-basics-of-good-database-design-in-web-development/). Make sure you follow the link and also read: [One to Many](http://www.tekstenuitleg.net/en/articles/software/database-design-tutorial/one-to-many.html) and [Many to Many](http://www.tekstenuitleg.net/en/articles/software/database-design-tutorial/many-to-many.html). <%= deliverable "Respond to Warmups in Latte" %>
 
-#### Discussion
-* Actionable feedback from 3x5 cards
-  * Do a Git Tutorial. We will do one at Recitation today
-  * Some people had lots of challenges setting up the environment
-  * People like the live coding demonstrations
-  * People like hearing about real-world applicataions and how things work there
-* Other feedback
-  * Mention what's the homework at the end of each class?
-  * Don't like that videos require me to open window to full screen
-  * Don't like to use a book for coding assignment, would like online
-* Unclear Feedback:
-  * Stop Changing all the future assignments if we haven't gotten there yet.
 
 <%= include_topic :data_modeling %>
 
