--- a/content/content/lectures/part1/03_web_intro.md.erb
+++ b/content/content/lectures/part1/03_web_intro.md.erb
@@ -1,14 +1,13 @@
 ---
 title: Internet and Web Basics
 desc: We are going to look at some fundamentals of how the web works
-homework: 1) Complete and submit programming assignment
+homework: 1) Resubmit and complete programming assigment
 cat: web
 ---
 <%= homework_hdr %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-<%= callout("Note", " This lecture is significantly modified from before. The homework submission here is for the final results of the interactive music homework assigment. The Sinatra homework that was here has been moved forward a little but it's still coming!") %>
-
-1. <%= codebadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests.
+1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming probem." %>
 
 #### Code review
 * I will look for a couple of volunteers so we can look at the solution that they have submitted. See [Art Crits](http://q-art.org.uk/portfolio/art-crits-20-questions/)
