--- a/content/content/lectures/part1/04_webservers.md.erb
+++ b/content/content/lectures/part1/04_webservers.md.erb
@@ -5,7 +5,8 @@ homework: 1) Do the first 25 assignments in "Ruby the hard way"; 2) Begin workin
 cat: web
 ---
 <%= homework_hdr %>
-1. Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
+
 1. <%= partbadge %> Begin working on the famous <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. It will be due next class.
 
 #### Discussion
@@ -21,8 +22,6 @@ cat: web
   * No global variables
   * Don't use @@foo
   * instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
-
-#### Web Servers: Review
 
 <%= include_topic :how_web_servers_work %>
 
