--- a/content/bootstrap/css/custom.css
+++ b/content/bootstrap/css/custom.css
@@ -2,11 +2,11 @@
 @import url(//fonts.googleapis.com/css?family=Telex);
 
 .themefg {
-  color: rgb(189,122,56);
+  color: rgb(64,56,207);
 }
 
 .themebg {
-  background-color: rgb(189,122,56);
+  background-color: rgb(64,56,207);
 }
 .nav-menus {
   height: 0px;
@@ -20,6 +20,10 @@
 
 .navbar-inverse .navbar-nav > li > a:hover {
   font-weight: bold;
+}
+
+a {
+ color: rgb(64,56,207);
 }
 
 .navbar a.navbar-title {
@@ -66,7 +70,7 @@
 
 h1, h2, h3, h4, h5{
 	font-family: telex;
-	color: rgb(21, 123, 207);
+	color: rgb(64,56,207);
 }
 
 h3 {
@@ -79,7 +83,7 @@ h3.body-header {
 
 h4 {
 	margin-top: 20px;
-  border-top: rgb(21, 123, 207) solid 3px;
+  border-top: rgb(64,56,207) solid 3px;
 	padding-top: 5px;
 }
 
