Checkpoint work to git

--- a/content/content/lectures/part1/03_web_intro.md.erb
+++ b/content/content/lectures/part1/03_web_intro.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Internet and Web Basics
+title: Web Basics
 desc: We are going to look at some fundamentals of how the web works
 homework: 1) Resubmit and complete programming assigment
 cat: web
