--- a/content/content/extras/prework.md.erb
+++ b/content/content/extras/prework.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Recommended Pre-Work
+title: Recommended Pre-Work for Cosi166b
 ---
 For those of you (most of you) who don't have experience with Ruby on Rails, here is a list of preparatory work that you ought to do before coming to the first day of class. There are a lot of things to learn in this course, so I very strongly recommend you to do the following prework before the class starts.
 
