--- a/content/content/lectures/part1/04_webservers.md.erb
+++ b/content/content/lectures/part1/04_webservers.md.erb
@@ -10,18 +10,7 @@ cat: web
 1. <%= partbadge %> Begin working on the famous <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. It will be due next class.
 
 #### Discussion
-* Questions about the homework. Discussion about Ruby the Hard Way. Discussion about Mazes.
-* Ruby coding reminders:
-  * spaces not tabs, 2 spaces per tab
-  * Classes are CamelCased
-  * method_names and variable_names are lower case, with underlines
-  * filenames are lower case with underlines, named after the top_level_class.rb
-  * Classes should be less than 100 lines long
-  * Methods should be less than 15 lines long
-  * No standalone code or definitions. Everything should be part of a class
-  * No global variables
-  * Don't use @@foo
-  * instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
+* Discussion about Ruby the Hard Way. Discussion about Mazes.
 
 <%= include_topic :how_web_servers_work %>
 
