--- a/content/content/lectures/part1/05_hello_sinatra.md.erb
+++ b/content/content/lectures/part1/05_hello_sinatra.md.erb
@@ -9,11 +9,8 @@ cat: web
 
 1. <%= zipbadge %> Complete and submit <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. <%= deliverable "Zip up your pa_mazes directory in your portfolio and submit it to Late." %>
 
-1. <%= codebadge %> <%= partbadge %> **Code:** Use the video below while you read and do all the steps in this tutorial: [Making a simple, database driven website with Sinatra and Heroku](http://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/). Here you will see essentially all the basic steps you would need to create a simple version of nanoTwitter. Expect not to understand everything but I want you to start getting a feel of the lay of the land. Do the work inside your <%=link_to_intro :portfolio %>, directory `sinatraintro`. <%= deliverable "Working code in your portfolio" %>
-
-    I have done the complete example and made a video of it. Feel free to follow it but you must also type it in on your computer and get it to work. As for help if you require it!
-
-    <iframe width="560" height="315" src="//www.youtube.com/embed/5VGJF-RbTbE" frameborder="0" allowfullscreen></iframe>
+<%= include_topic :what_is_sinatra %>
+<%= include_topic :hands_on_sinatra_demo %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
