--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -9,7 +9,7 @@ cat: general
 
 <%= callout("Note for first day of class:", " Each day of class has a page on this web site. The first section of that page is always the homework due on that very day. So in other words, the homework listed here is actually 'pre-work' for day one. We will go over this in a little more detail during class.") %>
 
-1. **Linux Parition**: Over the years, developing Ruby and Sinatra on Windows has been a less than pleasant experience, in fact a massive headache. You should seriously consider setting up Here is why and how: <%= link_to_topic :linux_partition %>
+1. **Linux Parition**: Over the years, developing Ruby and Sinatra on Windows has been a less than pleasant experience, in fact a massive headache. You should seriously consider setting up Here is why and how: <%= link_to_topic :linux_partition %>. Another option is to use VMWare.
 
 1. **Ruby Install**: Install Ruby. Here are my Ruby installation instructions: <%= link_to_topic :ruby_install_tips %>
 
@@ -21,8 +21,7 @@ cat: general
 * TAs introduce themselves
 
 #### About this course
-* What is this course about and how is it different from the prerequisite [Cosi166b - Capstone in Software Entrepreneurs](http://cosi166b-s2016.s3-website-us-west-2.amazonaws.com/content/intro/syllabus.md/)?
-* This is version 2 of this course. It has changed about 25% from previous years!
+* What is this course about and how is it different from the prerequisite [Cosi166b - Capstone in Software Entrepreneurs](http://cosi166b.s3-website-us-west-2.amazonaws.com/content/intro/syllabus.md/)?
 * Heres what you should learn in this course: <%= link_to_background :goals_cosi105 %>
 * Why do I think the content of this course is important? Why might you find it important and useful?
 * Could this course change your life? YES!
@@ -33,7 +32,7 @@ cat: general
 
 * Here are the <%= link_to_topic :books_cosi105 %>
 * Let's take a tour of the web site
-* Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=6990)
+* Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=11167)
 
 #### Recitation
 <%= callout("NB", " Every Tuesday from 5:00pm to 6:50pm we have a lab/workshop in Goldsmith 317") %>
@@ -41,24 +40,18 @@ cat: general
 * There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
 
 #### 30 Minute Quick Assignment
-* <%= link_to_background :leveling %>
+* [30 Minute Leveling Exercise](https://goo.gl/forms/C8cqan9CvrwOLb8m2)
 
 #### Homework Info
 * Yes there is a fair bit of homework
 * Where to find it and how to hand it in: <%= link_to_topic :homework %>
-* The portfolio
-	* Where all your programming work has to happen
-	* Look carefully at <%= link_to_intro :portfolio %>.
+* We use a portfolio for some of the homework: <%= link_to_intro :portfolio %>.
 * Here's more information about <%= link_to_background :grading %>
-
-#### Skills Inventory
-* **Whether you are officially registered or want to be on the wait list**
-* *Really quickly* Fill in [Skills Inventory](https://goo.gl/forms/BQDDhPz0s6d1n9oB2). (This page is protected until the day of class) Obviously this is not graded. The purpose is to help us put together good teams. **Do it now please**
 
 #### Project
 
 * All students will work in teams on their version of <%= link_to_section :nt, :nt_outline %>
-* We will form teams of exactly 4-5 students. You will be assigned to a team.
+* We will form teams of exactly 4 students. You will be assigned to a team.
 * Notes about <%= link_to_topic :working_in_teams %>
 
 #### Next Class
