--- a/content/content/intro/02_portfolio.md.erb
+++ b/content/content/intro/02_portfolio.md.erb
@@ -12,5 +12,5 @@ title: Code Portfolio
 
 ##### Emails to share your Dropbox folder with:
 * Pito Salas: pitosalas@gmail.com
-* Karishma Khan: reddy22k@mtholyoke.edu
-* Alex Suk: asuk24@brandeis.edu
+* Zach Weis: zweiss@brandeis.edu
+* Ian Leeds; ileeds@brandeis.edu
