checking and fixing content up to Feb 1

--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -3,6 +3,7 @@ title: Welcome
 desc: Introductions and logistics
 homework: 1) Make sure your computer is properly set up! 2) Begin working on the ruby Programming Assignment
 cat: general
+homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard way
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
@@ -11,7 +12,7 @@ cat: general
 
 1. **Linux Parition**: Over the years, developing Ruby and Sinatra on Windows has been a less than pleasant experience, in fact a massive headache. You should seriously consider setting up Here is why and how: <%= link_to_topic :linux_partition %>. Another option is to use VMWare.
 
-1. **Ruby Install**: Install Ruby. Here are my Ruby installation instructions: <%= link_to_topic :ruby_install_tips %>
+1. **Ruby Install**: Install Ruby 2.5. Here are my Ruby installation instructions: <%= link_to_topic :ruby_install_tips %>
 
 1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
