--- a/content/content/lectures/part1/02_ruby_review.md.erb
+++ b/content/content/lectures/part1/02_ruby_review.md.erb
@@ -3,6 +3,7 @@ title: Ruby Review
 desc: Restart your Ruby brain with questions about the programming assignment
 homework: 1) Complete first draft ofprogramming assignment
 cat: programming
+homework: 1) First draft of IMS
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
