--- a/content/content/lectures/part2/02_twitterwhack.md.erb
+++ b/content/content/lectures/part2/02_twitterwhack.md.erb
@@ -5,6 +5,8 @@ homework: 1) Implement Twitterwhack assignment; 2) Form nanoTwitter team; 3) Wor
 cat: web
 ---
 <%= homework_hdr %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
+
 1. <%= codebadge %> Implement the Sinatra Twitterwhack project
 	* Please do your work in your <%= link_to_intro :portfolio %>, directory ./twitterwhack
 	* Here are the detailed instructions: <%= link_to_topic :pa_twitterwhack %>
