--- a/content/content/lectures/part2/03_sinatra_soa.md.erb
+++ b/content/content/lectures/part2/03_sinatra_soa.md.erb
@@ -6,6 +6,7 @@ cat: web
 ---
 
 <%= homework_hdr %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
 1. <%= pdfbadge %> <%= partbadge %> <%= timebadge %> **Read [SOODR] Chapter 2:** \[SODRR\] Chapter 2. Make note of points that confused you. It is a bit of an abstract chapter, but it sets the stage for the kinds of architectures we care about. Answer the following warmup questions about the chapter:
   * What is a Service Oriented Architecture? The whole chapter is about that topic and I don't expect you to reproduce the chapter. How do you recognize a SOA? What are some of the advantages? How would you explain it to an experienced web developer who had not taken this course?
