--- a/content/content/lectures/part1/03_web_intro.md.erb
+++ b/content/content/lectures/part1/03_web_intro.md.erb
@@ -9,10 +9,12 @@ cat: web
 
 1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming probem." %>
 
+#### Interesting, optional reading:
+* [How an internet mapping glitch turned a random kansas farm into a digital hell](https://splinternews.com/how-an-internet-mapping-glitch-turned-a-random-kansas-f-1793856052)
 #### Code review
-* I will look for a couple of volunteers so we can look at the solution that they have submitted. See [Art Crits](http://q-art.org.uk/portfolio/art-crits-20-questions/)
+<blockquote class="pretty">"The crit is a model of learning whereby artists present their work to a group in order to gain feedback on how that work is being ‘read’ and ways that they might develop it further. They are a part of almost every art course at further and higher level education throughout the UK."</blockquote>
 
-  > "The crit is a model of learning whereby artists present their work to a group in order to gain feedback on how that work is being ‘read’ and ways that they might develop it further. They are a part of almost every art course at further and higher level education throughout the UK."
+* I will look for a couple of volunteers so we can look at the solution that they have submitted. See [Art Crits](http://q-art.org.uk/portfolio/art-crits-20-questions/)
 
 #### Review Internet Basics
 <%= include_topic :internet_basics %>
