--- a/content/content/lectures/part1/05_hello_sinatra.md.erb
+++ b/content/content/lectures/part1/05_hello_sinatra.md.erb
@@ -1,13 +1,14 @@
 ---
 title: "Hello Sinatra"
 desc: Do a Sinatra tutorial and review again how the web works
-homework: 1) Follow and implement tutorial, get the db driven web site to work
+homework: 1) Complete PA_Mazes; 2) Install Postgres
 cat: web
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-1. <%= zipbadge %> Complete and submit <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. <%= deliverable "Zip up your pa_mazes directory in your portfolio and submit it to Late." %>
+1. <%= zipbadge %> Complete and submit <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. <%= deliverable "Zip up your pa_mazes directory in your portfolio and submit it to Latte." %>
+1. <%= partbadge %> Install the Postgres database on your personal computer: [Postgres Installation Instructions](https://wiki.postgresql.org/wiki/Detailed_installation_guides). <%= deliverable "The output from doing this command on the commandline: postgres ---version" %>
 
 <%= include_topic :what_is_sinatra %>
 <%= include_topic :hands_on_sinatra_demo %>
