--- a/content/content/lectures/part1/06_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/06_sinatra_intro.md.erb
@@ -7,10 +7,21 @@ cat: web
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-1. <%= timebadge %> <%= partbadge %> **Read:** Study Service Oriented Design in Ruby and Rails \[SODDR\] Chapter 1, as you watch this video. In the video I narrate concepts and demonstrate the actual coding that is done in that chapter. It covers much of the same ground as the last tutorial, but goes a little further. <%= deliverable "Answer warmup questions in Latte." %>
+1. <%= timebadge %> <%= partbadge %> **Read:** Study Service Oriented Design in Ruby and Rails \[SODDR\] Chapter 1, as you watch this video. In the video I narrate concepts and demonstrate the actual coding that is done in that chapter. It covers much of the same ground as the last tutorial, but goes a little further. Please answer the following warmup questions:
 
-    <div class="well"><iframe width="400" height="225" src="https://www.youtube.com/embed/zPaG-g-d6sY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+    * In your own words, what is a "Service"? Can you think of an example which is NOT mentioned in the book? Can you imagine an example of a "Service" that would be provided by nanoTwitter? [By the way, other words you will encounter for a "service" are a web service or a web API.]
+    * ActiveRecord is an example of an ORM, Object Relational Mapper. What does an ORM do? Why is it useful? ActiveRecord is the most popular Ruby ORM. Do some googling and find another very popular Ruby ORM. (I don't have a specific one in mind, there are several popular ones to pick from.)
+    * Can you explain the role of the "Client Library" in the code you wrote?
+    * Please list one or two ideas in the Chapter that you just didn't understand. If you feel you understand it all, please list one or two ideas that you think are the most important. (Make sure you tell me whether you do or don't understand the concepts you list) :)
+
+    <%= deliverable "Answer warmup questions in Latte" %>
+
 2. <%= codebadge %> <%= partbadge %> **Code**: Now, actually implement the code in \[SODRR\] Chapter 1 and get it to work! **Important**: Please attend to these specific details!
+
+<div class="well"><iframe width="400" height="225" src="https://www.youtube.com/embed/zPaG-g-d6sY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+
+<%= callout("NB", " Dont overlook caveats in the following bullets") %>
+
   * Attempt to get the code to work, **but importantly, stop when you get to "Implementing the client library".**
   * Do coding on your own computer in your <%= link_to_intro :portfolio %> in a new top level directory called `user-service`
   * Because the book is a couple of years old, there are some changes you need to keep in mind in order to get it to work on your own computer. They are all mentioned in the video but here they are again:
