--- a/content/content/lectures/part2/01_twitter_case.md.erb
+++ b/content/content/lectures/part2/01_twitter_case.md.erb
@@ -5,6 +5,8 @@ homework: 1) Write up definitions of the key twitter functions
 cat: nt
 ---
 <%= homework_hdr %>
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
+
 1. <%= pdfbadge %> **Schema Design:** Please do the following <%= link_to_topic :hw_schema_design %>. I ask for four, increasingly difficult schema designs. Notice that I specify an exact format in which to write the responses! <%= deliverable "Complete the design challenges." %>
 1. <%= pdfbadge %> Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
   * a username (aka Twitter handle) your name on twitter
