Checkpoint work to git

--- a/content/content/lectures/part1/02_ruby_review.md.erb
+++ b/content/content/lectures/part1/02_ruby_review.md.erb
@@ -8,7 +8,7 @@ homework: 1) First draft of IMS
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-1. <%= partbadge %> <%= zipbadge %> **Programming:** Do <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input. Do coding on your own computer in your <%= link_to_intro :portfolio %> in a new top level directory called `pa-ims`. You should <%= deliverable "First draft of soliution, zip up the directory and submit to Latte." %>
+1. <%= partbadge %> <%= zipbadge %> **Programming:** Do <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input. Do coding on your own computer in your <%= link_to_intro :portfolio %> in a new top level directory called `pa-ims`. You should <%= deliverable "First draft of solution, zip up the directory and submit to Latte." %>
 
 #### Ruby Live Coding Demonstration
 * <%= link_to_topic :intro_tut %>
