--- a/content/content/lectures/part2/05_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/05_architecting_for_scale.md.erb
@@ -26,5 +26,9 @@ cat: scale
 
 <%= include_topic :scaling %>
 
+#### Some scalability tools
+* [Open Source Load Testing Tools: Which one should I use?](https://www.blazemeter.com/blog/open-source-load-testing-tools-which-one-should-you-use)
+* [Top 5 Performance/Load Testing Tools in 2018](https://www.guru99.com/performance-testing-tools.html)
+
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
