Checkpoint work to git

--- a/content/content/lectures/part1/02_ruby_review.md.erb
+++ b/content/content/lectures/part1/02_ruby_review.md.erb
@@ -29,6 +29,9 @@ homework: 1) First draft of IMS
   * Don't use @@foo
   * instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
 
+#### Live coding
+  * Lets do this program: <%= link_to_topic :pa_code_classes_2 %>
+
 #### Discussions and questions
   * Review <%= link_to_topic :pa_interactive_music %>
   * MOSS
