--- a/content/content/lectures/part2/02_twitterwhack.md.erb
+++ b/content/content/lectures/part2/02_twitterwhack.md.erb
@@ -13,12 +13,7 @@ cat: web
 	* Try and pay attention to object design and unit tests!
 	* Please record a brief <%= link_to_topic :screencast %> illustrating your app in action, and add a link to the screencast in the README.
 	* <%= deliverable "Your code plus screencast, in your portfolio, as stated above. Zip up the pa_twitterwhack folder and submit it to Latte" %>
-1. <%= partbadge %> Form your nanoTwitter teams
-  * We have 15 students. We will make 5 teams of 3.
-  * You will need to find time to work together, so please check teammates schedule and try to pick a time slot before joining together.
-  * Here's the [signup spreadsheet for nanoTwitter teams.](https://docs.google.com/a/brandeis.edu/spreadsheets/d/13o2Xk6ihbbNXRo4pCtmO9nEXdey_ve-0D6MLRA9DQw4/edit?usp=sharing)
-  * This is a "class participation" homework. 0 If you don't do it. 100 if you do.
-1. <%= codebadge %> **Begin work on nanoTwitte:**. Begin work on nanoTwitter! Your detailed instructions can be found here:  <%= link_to_section :nt, :nt_outline %>. This work is all done together as a team. It makes sense to divide up tasks between the team members. All nanoTwitter work, from here on, should happen in your <%= link_to_intro :portfolio %>, directory `/nanotwitter`.
+1. <%= codebadge %> **Begin work on nanoTwitter:**. Begin work on nanoTwitter! Your detailed instructions can be found here:  <%= link_to_section :nt, :nt_outline %>. This work is all done together as a team. It makes sense to divide up tasks between the team members. All nanoTwitter work, from here on, should happen in your <%= link_to_intro :portfolio %>, directory `/nanotwitter`.
 
 #### Discussion
 * Discuss homework
