--- a/content/content/lectures/part2/01_twitter_case.md.erb
+++ b/content/content/lectures/part2/01_twitter_case.md.erb
@@ -8,15 +8,16 @@ cat: nt
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
 1. <%= pdfbadge %> **Schema Design:** Please do the following <%= link_to_topic :hw_schema_design %>. I ask for four, increasingly difficult schema designs. Notice that I specify an exact format in which to write the responses! <%= deliverable "Complete the design challenges." %>
-1. <%= pdfbadge %> Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
-  * a username (aka Twitter handle) your name on twitter
-  * to "mention":when you write @pitosalas in a tweet;
-  * to followi: when you ask to see tweets from someone else;
-  * \[n,v\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
-  * a twitter stream or feed: all the tweets that a certain user has posted
-  * a #hashtag: a way to tag any tweet, which can be searched later
-  * a timeline: a real time stream of tweets. Your home stream or timeline is where you see all the tweets shared by the people you follow
-  * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
+1. <%= pdfbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
+
+    * a username (aka Twitter handle) your name on twitter
+    * to "mention":when you write @pitosalas in a tweet;
+    * to followi: when you ask to see tweets from someone else;
+    * \[n,v\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
+    * a twitter stream or feed: all the tweets that a certain user has posted
+    * a #hashtag: a way to tag any tweet, which can be searched later
+    * a timeline: a real time stream of tweets. Your home stream or timeline is where you see all the tweets shared by the people you follow
+    * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
 
 #### Discussion about homework
 * Lets look at some students' diagrams
