Checkpoint work to git

--- a/content/content/lectures/part1/04_webservers.md.erb
+++ b/content/content/lectures/part1/04_webservers.md.erb
@@ -1,6 +1,6 @@
 ---
-title: Web Servers
-desc: With that foundation, we now look deeper at how web servers work.
+title: Sinatra Web Servers
+desc: With that foundation, we now look deeper at how web servers work and Sinatra
 homework: 1) First draft of PA_MAZES
 cat: web
 ---
@@ -17,6 +17,10 @@ cat: web
 <%= include_topic :www %>
 
 <%= include_topic :web_formats_protocols %>
+
+<%= include_topic :what_is_sinatra %>
+
+<%= include_topic :hands_on_sinatra_demo %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
