--- a/content/content/lectures/part1/05_oo_design.md.erb
+++ b/content/content/lectures/part1/05_oo_design.md.erb
@@ -1,6 +1,6 @@
 ---
-title: "Hello Sinatra"
-desc: Do a Sinatra tutorial and review again how the web works
+title: Software Design
+desc: An interlude into good Software Design
 homework: 1) Complete PA_Mazes; 2) Install Postgres
 cat: web
 ---
@@ -10,8 +10,10 @@ cat: web
 1. <%= zipbadge %> Complete and submit <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. <%= deliverable "Zip up your pa_mazes directory in your portfolio and submit it to Latte." %>
 1. <%= partbadge %> Install the Postgres database on your personal computer: [Postgres Installation Instructions](https://wiki.postgresql.org/wiki/Detailed_installation_guides). <%= deliverable "The output from doing this command on the commandline: postgres ---version" %>
 
-<%= include_topic :what_is_sinatra %>
-<%= include_topic :hands_on_sinatra_demo %>
+<%= include_topic :oo_design %>
+
+#### Ruby Live Coding Demonstration and discussion
+<%= include_topic :classes_tut %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
