Checkpoint work to git

--- a/content/content/lectures/part1/05_oo_design.md.erb
+++ b/content/content/lectures/part1/05_oo_design.md.erb
@@ -10,6 +10,12 @@ cat: web
 1. <%= zipbadge %> Complete and submit <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. <%= deliverable "Zip up your pa_mazes directory in your portfolio and submit it to Latte." %>
 1. <%= partbadge %> Install the Postgres database on your personal computer: [Postgres Installation Instructions](https://wiki.postgresql.org/wiki/Detailed_installation_guides). <%= deliverable "The output from doing this command on the commandline: postgres ---version" %>
 
+#### Interesting but not required extra reading
+* [Smells to Refactorings](http://www.industriallogic.com/wp-content/uploads/2005/09/smellstorefactorings.pdf)
+* [Sandi Metz' Rules for Developers](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
+* [Sandi Metz' Rules Video](http://youtu.be/npOGOmkxuio)
+
+
 <%= include_topic :oo_design %>
 
 #### Ruby Live Coding Demonstration and discussion
