Checkpoint work to git

--- a/content/content/extras/01_sw_quality.md.erb
+++ b/content/content/extras/01_sw_quality.md.erb
@@ -21,7 +21,7 @@ cat: design
 
 ##### More...
 
-* <%= link_to_topic :four_rules_simple_design %>
+* <%= link_to_topic :software_design %>
 * <%= link_to_topic :testing_evol %>
 
 #### Next Class
