--- a/content/content/extras/02_tdd.md.erb
+++ b/content/content/extras/02_tdd.md.erb
@@ -39,7 +39,7 @@ cat: design
 
 <%= include_topic :testing_fixtures %>
 
-<%= link_to_topic :four_rules_simple_design %>
+<%= link_to_topic :software_design %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
