--- a/content/content/extras/04_dynamic_languages.md.erb
+++ b/content/content/extras/04_dynamic_languages.md.erb
@@ -48,7 +48,7 @@ myAnimal.eat();
 * Somewhere between the two
 * Some newer languages, e.g. TypeScript: [Type Inference](https://github.com/Microsoft/TypeScript-Handbook/blob/master/pages/Type%20Inference.md)
 
-<%= include_topic :four_rules_simple_design %>
+<%= include_topic :software_design %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
