--- a/content/content/lectures/part1/05_oo_design.md.erb
+++ b/content/content/lectures/part1/05_oo_design.md.erb
@@ -14,12 +14,12 @@ cat: web
 * [Smells to Refactorings](http://www.industriallogic.com/wp-content/uploads/2005/09/smellstorefactorings.pdf)
 * [Sandi Metz' Rules for Developers](http://robots.thoughtbot.com/sandi-metz-rules-for-developers)
 * [Sandi Metz' Rules Video](http://youtu.be/npOGOmkxuio)
+* [Understanding the four rules of Simple Design](https://leanpub.com/4rulesofsimpledesign)
+* [Book Review Understanding the 4 Rules of Simple Design](https://blog.thesoftwarecraft.com/2014/04/book-review-understanding-4-rules-of.html)
 
-
-<%= include_topic :oo_design %>
-
-#### Ruby Live Coding Demonstration and discussion
-<%= include_topic :classes_tut %>
+<%= include_topic :software_design %>
+<%= include_topic :code_smells %>
+<%= include_topic :classes_objects_polymorphism %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
