--- a/content/content/lectures/part1/06_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/06_sinatra_intro.md.erb
@@ -37,6 +37,9 @@ cat: web
     1. The specs the chapter tells you to add are already included in the code on your site in service_spec.rb
   * <%= deliverable "Working code in your portfolio" %>
 
+{:start="3"}
+1. <%= include_topic :coffee_assignment %>
+
 #### Discussion
 * Discuss concepts you learned
 * Quick review of web client / server relationship (http/url/html/json)
