Checkpoint work to git

--- a/content/content/lectures/part2/02_nt_intro.md.erb
+++ b/content/content/lectures/part2/02_nt_intro.md.erb
@@ -1,7 +1,7 @@
 ---
-title: TwitterWhack
-desc: We implement and discuss TwitterWhack a simple Sinatra/Twitter app.
-homework: 1) Implement Twitterwhack assignment; 2) Form nanoTwitter team; 3) Work on nT 0.1
+title: NanoTwitter introduced
+desc: Get explanation of
+homework: 1) Implement Twitterwhack assignment; 2)  Begin work on Nanotwitter with your team.
 cat: web
 ---
 <%= homework_hdr %>
@@ -22,8 +22,11 @@ cat: web
   * Let's talk about challenges encountered
   * Who is still unsure about the role of a "client library" in a service oriented architecture?
 
-#### A worked out example
-* <%= link_to_topic :hands_on_sinatra_db_work %>
+#### All About nano Twitter
+
+1. **<%= link_to_section :nt, :nt_functionality %>:** Point by point requirements for the project that everyone will be doing, nanoTwitter
+1. **<%= link_to_section :nt, :nt_arch %>:**Review of key technical points of architecture and process
+1. **<%= link_to_section :nt, :nt_outline %>:** Approximate sequence of steps to get to the finished product
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
