--- a/content/content/lectures/part2/01_sinatra_twitter.md.erb
+++ b/content/content/lectures/part2/01_sinatra_twitter.md.erb
@@ -1,7 +1,7 @@
 ---
-title: Twitter Case Study
+title: Sinatra and Twitter
 desc: Introduction to Twitter and nanoTwitter
-homework: 1) Write up definitions of the key twitter functions
+homework: 1) Schema Design; 2) Write up definitions of the key twitter functions
 cat: nt
 ---
 <%= homework_hdr %>
@@ -23,13 +23,8 @@ cat: nt
 * Lets look at some students' diagrams
 * Let's talk about the features in the real Twitter
 
-#### All About nano Twitter
-
-1. **<%= link_to_section :nt, :nt_functionality %>:** Point by point requirements for the project that everyone will be doing, nanoTwitter
-
-1. **<%= link_to_section :nt, :nt_arch %>:**Review of key technical points of architecture and process
-
-1. **<%= link_to_section :nt, :nt_outline %>:** Approximate sequence of steps to get to the finished product
+#### A worked out example
+* <%= include_topic :hands_on_sinatra_db_work %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
