Checkpoint work to git

--- a/content/content/lectures/part2/02_nt_intro.md.erb
+++ b/content/content/lectures/part2/02_nt_intro.md.erb
@@ -13,7 +13,8 @@ cat: web
 	* Try and pay attention to object design and unit tests!
 	* Please record a brief <%= link_to_topic :screencast %> illustrating your app in action, and add a link to the screencast in the README.
 	* <%= deliverable "Your code plus screencast, in your portfolio, as stated above. Zip up the pa_twitterwhack folder and submit it to Latte" %>
-1. <%= codebadge %> **Begin work on nanoTwitter:**. Begin work on nanoTwitter! Your detailed instructions can be found here:  <%= link_to_section :nt, :nt_outline %>. This work is all done together as a team. It makes sense to divide up tasks between the team members. All nanoTwitter work, from here on, should happen in your <%= link_to_intro :portfolio %>, directory `/nanotwitter`.
+1. **Begin work on nanoTwitter:**. Begin work on nanoTwitter! Your detailed instructions can be found here:  <%= link_to_section :nt, :nt_outline %>. This work is all done together as a team. It makes sense to divide up tasks between the team members. All NanoTwitter work should be done in a single github repository for your team.
+1. <%= pdfbadge %> **Organize Team**: **Read this article: <%= link_to_topic :working_in_teams %>**. Past experience has taught me that Teams that don't regularly work side by side face to face do a lot worse. I want you to do well. Decide as a team on a 2 hour block every week where you will work together. What weekday and time and where. All three or four teammembers need to able to make it. One of our TAs will be your 'ta-partner' and he will stay in touch with you on a weekly basis to see how things are going.. <%= deliverable "1) what week day, what time, and where, will your two hour weekly meeting be. 2) What is the url of your team github account." %>
 
 #### Discussion
 * Discuss homework
