--- a/content/content/lectures/part2/01_sinatra_twitter.md.erb
+++ b/content/content/lectures/part2/01_sinatra_twitter.md.erb
@@ -12,15 +12,15 @@ cat: nt
 
     * a username (aka Twitter handle) your name on twitter
     * to "mention":when you write @pitosalas in a tweet;
-    * to followi: when you ask to see tweets from someone else;
+    * to follow: when you ask to see tweets from someone else;
     * \[n,v\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
     * a twitter stream or feed: all the tweets that a certain user has posted
     * a #hashtag: a way to tag any tweet, which can be searched later
-    * a timeline: a real time stream of tweets. Your home stream or timeline is where you see all the tweets shared by the people you follow
+    * timeline or twitter feed: Your home stream or timeline is where you see all the tweets shared by the people you follow
     * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
 
 #### Discussion about homework
-* Lets look at some students' diagrams
+* Lets look at some students' schema design
 * Let's talk about the features in the real Twitter
 
 #### A worked out example
