Checkpoint work to git

--- a/content/content/lectures/part2/03_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/03_sinatra_architecture.md.erb
@@ -14,10 +14,9 @@ cat: web
     * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
   * <%= deliverable "Submit warmup questions" %>
 1. <%= pdfbadge %> **Schema:** Complete and submit the [DBSCHEMA] part of nanoTwitter 0.1 (see  <%= link_to_section :nt, :nt_outline %>.). Do it individually, not with your team. <%= deliverable "nanoTwitter Schema Design" %>
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_section :nt, :nt_outline %>. All the work is happening in your portfolio, directory `/nanotwitter`. <%= team_deliverable %(nT code for [nanoTwitter 0.1] in portfolio and github) %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_section :nt, :nt_outline %>. All the work is happening in your portfolio, directory `/nanotwitter`. <%= team_deliverable %(nT code for [nanoTwitter 0.1] in portfolio and zipped up to latte) %>
 
 #### Discussion
-* Complete live coding demo from last class
 * Discussion about Chapter 2, what is a service and related questions
   * SOA vs SOD vs Restful Design vs. Microservices
   * What is business logic?
