--- a/content/content/nt/01_nt_functionality.md.erb
+++ b/content/content/nt/01_nt_functionality.md.erb
@@ -8,31 +8,53 @@ title: nano Twitter Functionality
 * All the URLs, both for the User Interface and for the Web Services API will attempt to follow REST design principles as far as possible.
 
 #### nT Functionality
-* Users:
-  * can register for an account by supplying an email a name and a password
-  * are never deleted
-  * are assigned a numeric id (the record id)
-* Logged in users
-  * Can follow and unfollow other registered users
-  * Can tweet
-  * Can see the flow of the last n tweets by the users that they have followed
-* Non-logged in users
-  * See the flow of the last n tweets by any user
-* Tweets
-  * Consist of
-    * a 140 characters of text
-    * a date-time of creation
-    * Anything else you want to add to make it more impressive
-  * Belong to one user
-  * Can never be deleted
+
+##### Users
+
+* can register for an account by supplying an email a name and a password
+* are never deleted
+* are assigned a numeric id (the record id)
+
+##### Logged in users:
+
+* Can follow and unfollow other registered users
+* Can tweet
+* Can see the flow of the last n tweets by the users that they have followed
+* Can see their `APItoken`. (You can define what it looks like. Don't worry about securit for now.)
+
+##### Non-logged in users:
+
+* See the flow of the last n tweets by any user
+
+##### Tweets:
+
+* Consist of
+  * a 280 characters of text
+  * a date-time of creation
+  * Anything else you want to add to make it more impressive (e.g. mentions, tags, etc.)
+* Belong to one user
+* Can never be deleted
+
+#### Features
+* Beyond the core CRUD features listed abovce
+* Login/Logout and a profile
+* Search
+* Mentions
+* Tags
 
 #### nT Web Services (REST) API
-* All paths start with /api/v1
-* /tweets/23 - return tweet with id
-* /users/23 - return user information for user 23
-* /tweets/recent - return the recent n tweets
-* /users/23/tweets - return the users recent tweets
-* You need to figure out the other ones. The objective is that someone can write, for example, an iPhone nanoTwitter client that would use this API to implement the functionality.
+**Important:** All paths start with this prefix, `/api/v1/{apitoken}/...`
+
+* GET /tweets/23 - return tweet with id
+* GET /users/23 - return user information for user 23
+* GET /tweets/recent - return the recent n tweets
+* GET /users/23/tweets - return the users recent tweets
+* POST /tweets/new - create a new tweet
+
+* You need to figure out the other ones.
+* The objective is that someone can write, for example, an iPhone nanoTwitter client that would use this API to implement the functionality.
+* Distinguish between the API calls that need a logged in user vs. those that are public
+*
 
 * Values as JSON, as example:
   * Tweet:
@@ -45,7 +67,7 @@ title: nano Twitter Functionality
   * Follow list: `["user_id": 22, "user_id": 23, ...]`
 
 #### nT User Interface
-* Basic bootstrappy html/css/javascript interface
+* Basic bootstrappy html/css/javascript interface at minimum
 * Clean but doesn't have to be fancy
 
 ##### Routes
@@ -62,16 +84,16 @@ title: nano Twitter Functionality
     * Button to follow that user (available only if logged in)
   * If no one is logged in
     * Display login link
-  * In all cases, also:
-    * Top 50 tweets of users followed by logged in user
-    * User's profile info
-    * Link to list of users followed by this user. Link text is a count.
-    * Link to list of tweets made by this user. Link text is a count.
-    * Link to list of users following this user. Link text is a count.
-    * Registration
-      * Display the user registration page (/user/register)
-      * Display user login prompt, and check for correct password (/login)
-      * Logout (/logout)
+* In all cases, also:
+  * Top 50 tweets of users followed by logged in user
+  * User's profile info
+  * Link to list of users followed by this user. Link text is a count.
+  * Link to list of tweets made by this user. Link text is a count.
+  * Link to list of users following this user. Link text is a count.
+* Registration and related
+  * Display the user registration page (/user/register)
+  * Display user login prompt, and check for correct password (/login)
+  * Logout (/logout)
 
 <%= include_topic :nt_test_interface %>
 
